--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ section {
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url('C:\Users\palom\Downloads\453941445_1246798613029223_8663743154755572507_n.jpg') no-repeat;
+    background: url('https://media.tenor.com/4iUt4Tm6SnAAAAAC/hacker.gif') no-repeat;
     background-size: cover;
     background-position: center;
 }
