--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background: url('https://th.bing.com/th/id/OIP.lmtWhdq_2XmwQOyIeodKlQHaGA?rs=1&pid=ImgDetMain') no-repeat center center fixed; /* Replace with actual image URL */
+    background: url('https://1.bp.blogspot.com/-wHeOfpFyjAA/WOYKx5ijjYI/AAAAAAAAABI/InN8TcBiE7EdYkbkZtnukpv8hTiwcI0QQCLcB/s640/hacker.gif') no-repeat center center fixed; /* Replace with actual image URL */
     background-size: cover;
     color: #fff;
     margin: 0;
